[project]
name = "reflex-mathjax"
version = "0.0.2"
description = "Reflex custom component mathjax"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.12"
authors = [
    { name = "Tyler" },
]
dependencies = [
    "reflex >= 0.8.0"
]

classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry]
packages = [
    { include = "reflex_mathjax", from = "src" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"